# src/routes/auth.ts
@@ -5,6 +5,8 @@ router.post('/register', ctrl.register);
 router.post('/login', ctrl.login);
 router.post('/login-mobile', ctrl.loginMobile);
 router.post('/google', ctrl.googleAuth);
+router.post('/google/init', ctrl.googleInit);
+router.post('/google/complete', ctrl.googleComplete);
 router.post('/request-mpin-reset', ctrl.requestMpinReset);
 router.post('/verify-mpin-reset', ctrl.verifyMpinReset);
 router.post('/refresh', ctrl.refreshToken);
